--- a/app/src/main/res/layout/activity_place__purchase_order.xml
+++ b/app/src/main/res/layout/activity_place__purchase_order.xml
@@ -392,7 +392,7 @@
                     android:padding="15dp"
                     android:layout_margin="20dp"
                     android:textColor="#FFFFFF"
-                    android:text="Add Requisition"
+                    android:text="Place Purchase Order"
                     android:gravity="center_horizontal" />
 
             </LinearLayout>
