--- a/app/src/main/res/layout/activity_supplier_dashboard.xml
+++ b/app/src/main/res/layout/activity_supplier_dashboard.xml
@@ -69,6 +69,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <RadioGroup
+            android:id="@+id/availabilityStatus"
             android:layout_width="195dp"
             android:layout_height="36dp"
             android:orientation="horizontal"
